# fcb

./: Cargo.toml  README.md  exec
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
tests/: e2e.rs
